devops/manifests/frontend-live-snapshot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "15"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"polaris-ems-frontend","namespace":"polaris-ems"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"polaris-ems-frontend"}},"template":{"metadata":{"labels":{"app":"polaris-ems-frontend"}},"spec":{"containers":[{"image":"703623468956.dkr.ecr.ap-south-1.amazonaws.com/dev/polaris-ems/frontend:latest","name":"frontend","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"200m","memory":"256Mi"},"reque [...]
  creationTimestamp: "2026-04-09T09:28:13Z"
  generation: 15
  name: polaris-ems-frontend
  namespace: polaris-ems
  resourceVersion: "24206351"
  uid: 09ce2f0c-d9fa-4654-977b-96190ecbc9ce
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: polaris-ems-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-14T12:40:49Z"
      labels:
        app: polaris-ems-frontend
        app.kubernetes.io/instance: polaris-ems-frontend
        app.kubernetes.io/name: mdms
    spec:
      containers:
      - image: 703623468956.dkr.ecr.ap-south-1.amazonaws.com/dev/polaris-ems/frontend:latest
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
          subPath: nginx.conf
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: ecr-secret
      nodeSelector:
        kubernetes.io/arch: arm64
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: service
        operator: Equal
        value: MDMS
      volumes:
      - configMap:
          defaultMode: 420
          name: polaris-ems-nginx-conf
        name: nginx-conf
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-14T06:37:14Z"
    lastUpdateTime: "2026-04-14T06:37:14Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-13T15:18:16Z"
    lastUpdateTime: "2026-04-14T12:40:54Z"
    message: ReplicaSet "polaris-ems-frontend-6ffc78dbbf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 15
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
